--- a/contacts.html
+++ b/contacts.html
@@ -42,13 +42,16 @@
       <main>
         <div class="content-wrapper">
           <h1>Контакты</h1>
-          <p>Сочи</p>
+          <p>г. Сочи, ул. Гагарина, 17</p>
           <p>
             Телефон:
             <a href="tel:+79216395783">+7 921 639-57-83</a>
           </p>
-          <p>WhatsApp, Telegram</p>
-          <p>Email: evd8@inbox.ru</p>
+          <p>
+            <a href="https://t.me/evgeniide_boer">WhatsApp</a>,
+            <a href="https://t.me/evgeniide_boer">Telegram</a>
+          </p>
+          <p><a href="mailto:">Email: evd8@inbox.ru</a></p>
         </div>
       </main>
 
