--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </footer>
 
       <div class="messenger-bar">
-        <div class="messenger-bar__title">Связаться</div>
+        <div class="messenger-bar__title">Связаться с нами</div>
 
         <a href="tel:+79216395783" class="messenger-btn call">
           <img src="../images/icons/phone-call.svg" alt="" />
