Services - card in minimal design

--- a/projects.html
+++ b/projects.html
@@ -41,19 +41,19 @@
       </header>
 
       <main>
-        <section class="projects section-soft">
-          <h1>Реализованные проекты</h1>
+        <section class="svc">
+          <h1 class="svc__title">Реализованные проекты</h1>
 
-          <article class="project-card">
-            <div class="project-card__image">
+          <article class="svc-row">
+            <div class="svc-row__media">
               <img
                 src="/images/projects/Ресторан ВелДон.jpg"
-                alt='Ресторан "ВелДон"'
+                alt='Ресторан "ВелДон", пгт Сириус'
               />
             </div>
 
-            <div class="project-card__content">
-              <h2 class="project-card__title">Ресторан "ВелДон", пгт Сириус</h2>
+            <div class="svc-row__body">
+              <h2>Ресторан «ВелДон», пгт Сириус</h2>
 
               <p>
                 Выполнено проектирование, монтаж, пуско-наладочные работы,
@@ -61,57 +61,47 @@
                 кондиционирования воздуха:
               </p>
 
-              <p>
-                - 28 систем общеобменной вентиляции, оборудование фирмы Aerostar
-                (в т.ч. и комплекты автоматики). 6 каркасно-панельных
-                вентустановок, 15 канальных установок и 7 крышных вентиляторов;
-              </p>
+              <ul>
+                <li>
+                  28 систем общеобменной вентиляции Aerostar (6
+                  каркасно-панельных, 15 канальных, 7 крышных вентиляторов)
+                </li>
+                <li>
+                  Системы кондиционирования: 3 VRV Daikin, 10 ККБ Asys
+                  Basicfreeze
+                </li>
+                <li>3 системы противодымной вентиляции</li>
+              </ul>
 
-              <p>
-                - системы кондиционирования. 3 VRV системы Daikin, 10 ККБ для
-                приточных вентустановок Asys Basicfreeze;
-              </p>
-
-              <p>
-                - 3 системы противодымной вентиляции, монтаж воздуховодов и
-                арматуры.
-              </p>
-
-              <p>Период выполнения работ: 2021 - 2023 г.</p>
+              <p>Период выполнения работ: 2021–2023 г.</p>
             </div>
           </article>
 
-          <article class="project-card">
-            <div class="project-card__image">
+          <article class="svc-row svc-row--reverse">
+            <div class="svc-row__media">
               <img
                 src="/images/projects/Пиццерия Pappi Pizza.jpg"
                 alt='Пиццерия "Pappi Pizza", пгт Сириус'
               />
             </div>
 
-            <div class="project-card__content">
-              <h2 class="project-card__title">
-                Пиццерия "Pappi Pizza", пгт Сириус
-              </h2>
+            <div class="svc-row__body">
+              <h2>Пиццерия «Pappi Pizza», пгт Сириус</h2>
 
               <p>
-                Выполнено проектирование, монтаж, пуско-наладочные работы,
-                балансировка и автоматизация систем вентиляции и
-                кондиционирования воздуха:
+                Выполнено проектирование, монтаж и пуско-наладочные работы
+                систем вентиляции и кондиционирования воздуха:
               </p>
 
-              <p>
-                - 9 систем общеобменной вентиляции, оборудование фирмы Aerostar
-                (в т.ч. и комплекты автоматики). 2 каркасно-панельные
-                вентустановки, 7 канальных установок;
-              </p>
+              <ul>
+                <li>
+                  9 систем общеобменной вентиляции Aerostar (2
+                  каркасно-панельные, 7 канальных)
+                </li>
+                <li>Системы кондиционирования: 2 ККБ Asys Basicfreeze</li>
+              </ul>
 
-              <p>
-                - системы кондиционирования. 2 ККБ для приточных вентустановок
-                Asys Basicfreeze;
-              </p>
-
-              <p>Период выполнения работ: 2020 - 2021 г.</p>
+              <p>Период выполнения работ: 2020–2021 г.</p>
             </div>
           </article>
         </section>
