--- a/services.html
+++ b/services.html
@@ -11,11 +11,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="icon" href="/images/icons/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/images/icons/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="/css/root.css" />
     <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- <link rel="stylesheet" href="/css/services.css" /> -->
     <link rel="stylesheet" href="/css/components.css" />
     <link rel="stylesheet" href="/css/media.css" />
   </head>
@@ -30,7 +31,7 @@
         </div>
 
         <nav class="header__nav">
-           <a href="/index.html">Главная</a>
+          <a href="/index.html">Главная</a>
           <a href="/services.html">Услуги</a>
           <a href="/projects.html">Проекты</a>
           <a href="/equipment.html">Оборудование</a>
@@ -41,106 +42,127 @@
       </header>
 
       <main>
-          <h1>Услуги по вентиляции и кондиционированию в Сочи</h1>
+        <section class="svc">
+          <h1 class="svc__title">
+            Услуги по вентиляции и кондиционированию под ключ
+          </h1>
 
-          <p>
-            SochiAir предоставляет полный комплекс услуг по системам вентиляции
-            и кондиционирования в Сочи — от аудита и проектирования до подбора
-            оборудования и монтажа под ключ для частных и коммерческих объектов.
-          </p>
+          <article class="svc-row">
+            <div class="svc-row__media">
+              <img
+                src="/images/services/airducts_cropped.jpg"
+                alt="Монтаж систем вентиляции и кондиционирования"
+              />
+            </div>
 
-          <div class="services-page">
-            <article class="service-row">
-              <h2>
-                Аудит и экспертиза проектов вентиляции и кондиционирования
-              </h2>
-              <p>
-                Проводим профессиональный аудит существующих проектов вентиляции
-                и кондиционирования с целью выявления ошибок, избыточных решений
-                и несоответствий нормативам.
-              </p>
-              <p>
-                Анализируем проектную документацию, технические решения, подбор
-                оборудования и схемы прокладки с учётом климата Сочи, СНиП и СП.
-              </p>
-              <p>
-                По результатам аудита предлагаем оптимизацию и технически
-                обоснованное удешевление проекта без потери качества и
-                функциональности.
-              </p>
-            </article>
+            <div class="svc-row__body">
+              <h2>Монтаж систем вентиляции и кондиционирования</h2>
+              <ul>
+                <li>Организация монтажных работ с профильной бригадой</li>
+                <li>Техническое руководство и контроль монтажа</li>
+                <li>Контроль соответствия проекту и нормативным требованиям</li>
+                <li>Взаимоувязка со смежными инженерными системами</li>
+              </ul>
+            </div>
+          </article>
 
-            <article class="service-row">
-              <h2>Проектирование систем вентиляции и кондиционирования</h2>
-              <p>
-                Разрабатываем проекты систем вентиляции и кондиционирования для
-                квартир, частных домов, гостиниц, офисов и коммерческих
-                объектов.
-              </p>
-              <p>
-                Проектирование выполняется с учётом архитектуры объекта,
-                тепловых нагрузок, требований заказчика и особенностей влажного
-                субтропического климата Сочи.
-              </p>
-              <p>
-                Готовим полный комплект проектной документации, включая схемы,
-                спецификации и технические решения.
-              </p>
-            </article>
+          <article class="svc-row">
+            <div class="svc-row__media">
+              <img
+                src="/images/services/layout_cropped.jpg"
+                alt="Разработка проектной документации"
+              />
+            </div>
 
-            <article class="service-row">
-              <h2>Подбор и поставка климатического оборудования</h2>
-              <p>
-                Подбираем оборудование для систем вентиляции и кондиционирования
-                под конкретные задачи и бюджет: кондиционеры, приточно-вытяжные
-                установки, рекуператоры, автоматику и аксессуары.
-              </p>
-              <p>
-                Работаем только с проверенными производителями и предлагаем
-                технически обоснованные решения без переплаты за избыточные
-                функции.
-              </p>
-              <p>Организуем закупку и поставку оборудования на объект.</p>
-            </article>
+            <div class="svc-row__body">
+              <h2>Разработка проектной документации</h2>
+              <ul>
+                <li>общеобменная вентиляция</li>
+                <li>кондиционирование воздуха</li>
+                <li>отопление и теплоснабжение</li>
+                <li>противодымная вентиляция</li>
+                <li>
+                  автоматизация и диспетчеризация систем отопления, вентиляции и
+                  кондиционирования воздуха
+                </li>
+              </ul>
+            </div>
+          </article>
 
-            <article class="service-row">
-              <h2>Монтаж систем вентиляции и кондиционирования под ключ</h2>
-              <p>
-                Выполняем профессиональный монтаж систем вентиляции и
-                кондиционирования любой сложности — от частных квартир до
-                коммерческих и промышленных объектов.
-              </p>
-              <p>
-                Соблюдаем технологию монтажа, требования производителей
-                оборудования и нормативную документацию.
-              </p>
-              <p>
-                По завершении работ выполняем пусконаладку и проверку работы
-                системы.
-              </p>
-            </article>
+          <article class="svc-row">
+            <div class="svc-row__media">
+              <img
+                src="/images/services/equipment_cropped.jpg"
+                alt="Подбор и поставка оборудования"
+              />
+            </div>
+            <div class="svc-row__body">
+              <h2>Подбор и поставка оборудования</h2>
+              <ul>
+                <li>Подбор вентиляционного и климатического оборудования</li>
+                <li>
+                  Оптимизация состава оборудования в соответствии с проектом без
+                  потери качества и функциональности
+                </li>
+                <li>
+                  Замена на аналогичное оборудование других производителей
+                </li>
+                <li>
+                  Техническое сопровождение поставки и шеф-монтаж оборудования
+                </li>
+              </ul>
+            </div>
+          </article>
 
-            <article class="service-row">
-              <h2>Климатические системы под ключ</h2>
-              <p>
-                Берём на себя весь цикл работ: аудит, проектирование, подбор
-                оборудования, монтаж и ввод в эксплуатацию.
-              </p>
-              <p>
-                Такой подход позволяет избежать ошибок на стыке этапов,
-                сократить сроки реализации и оптимизировать бюджет заказчика.
-              </p>
-              <p>
-                Вы получаете готовую и корректно работающую систему вентиляции и
-                кондиционирования под ключ.
-              </p>
-            </article>
-          </div>
+          <article class="svc-row">
+            <div class="svc-row__media">
+              <img
+                src="/images/services/expertise_cropped.jpg"
+                alt="Аудит и оптимизация стороннего проекта"
+              />
+            </div>
+
+            <div class="svc-row__body">
+              <h2>Аудит и оптимизация стороннего проекта</h2>
+              <ul>
+                <li>
+                  Выявление и устранение избыточных и неэффективных решений
+                </li>
+                <li>Оптимизация проекта без потери функциональности</li>
+                <li>
+                  Снижение стоимости реализации проекта и последующей
+                  эксплуатации
+                </li>
+                <li>Проверка соответствия действующим строительным нормам</li>
+                <li>Анализ расчётов и корректности подбора оборудования</li>
+                <li>Взаимоувязка со смежными разделами проекта</li>
+              </ul>
+            </div>
+          </article>
+
+          <article class="svc-row">
+            <div class="svc-row__media">
+              <img
+                src="/images/services/balancing_cropped.jpg"
+                alt="Пуско-наладка и балансировка"
+              />
+            </div>
+
+            <div class="svc-row__body">
+              <h2>Пуско-наладка и балансировка</h2>
+              <ul>
+                <li>Пуско-наладочные работы</li>
+                <li>Регулировка и балансировка систем</li>
+                <li>Проверка фактических параметров</li>
+                <li>Паспортизация систем</li>
+              </ul>
+            </div>
+          </article>
         </section>
       </main>
 
       <footer class="footer">
-      <div class="footer__container">
+        <div class="footer__container">
           <p class="footer__copyright">© 2025 SochiAir — Все права защищены</p>
           <p class="footer__links">
             <a href="/contacts.html">Контакты</a> |
